# terraform-provider-openwrt

./: .gh-arc.json  .gitignore  .goreleaser.yaml  BUILD.bazel  Makefile  README.md  WORKSPACE  acceptance-test.Dockerfile  flake.nix  go.mod  go.sum  main.go  shell.nix
.github/workflows/: release.yaml  test.yaml
docs/: index.md
docs/data-sources/: dhcp_dhcp.md  dhcp_dnsmasq.md  dhcp_domain.md  dhcp_host.md  dhcp_odhcpd.md  network_device.md  network_globals.md  network_interface.md  network_switch.md  network_switch_vlan.md  system_system.md  wireless_wifi_device.md  wireless_wifi_iface.md
docs/resources/: dhcp_dhcp.md  dhcp_dnsmasq.md  dhcp_domain.md  dhcp_host.md  dhcp_odhcpd.md  network_device.md  network_globals.md  network_interface.md  network_switch.md  network_switch_vlan.md  system_system.md  wireless_wifi_device.md  wireless_wifi_iface.md
examples/data-sources/openwrt_dhcp_dhcp/: data-source.tf
examples/data-sources/openwrt_dhcp_dnsmasq/: data-source.tf
examples/data-sources/openwrt_dhcp_domain/: data-source.tf
examples/data-sources/openwrt_dhcp_host/: data-source.tf
examples/data-sources/openwrt_dhcp_odhcpd/: data-source.tf
examples/provider/: provider.tf
examples/resources/openwrt_dhcp_dhcp/: import.sh  (+1 more)
internal/acceptancetest/: helpers.go
lucirpc/: README.md  acceptance-test.Dockerfile  client.go  client_acceptance_test.go  client_test.go  docker-compose.acceptance-test.yaml  options.go  options_test.go
openwrt/: provider.go  provider_acceptance_test.go  provider_test.go
scripts/: bump-patch-version.sh  test-docs-up-to-date.sh
(+107 files in other folders)
