load(
    "@bazel_gazelle//:def.bzl",
    "gazelle",
)

# gazelle:prefix github.com/joneshf/terraform-provider-openwrt
gazelle(
    name = "gazelle",
)

gazelle(
    name = "gazelle-diff",
    args = [
        "-mode=diff",
    ],
    command = "fix",
)

gazelle(
    name = "gazelle-fix",
    command = "fix",
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-prune",
        "-to_macro=go_repositories.bzl%go_dependencies",
    ],
    command = "update-repos",
)
